--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.1",
     "tailwindcss": "^4.1.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
